src/objects/Claim_NCC_Services_Worksheet__c.object
<CustomObject>
    <description>Claim NCC Services Worksheet for MCAR Claims</description>
    <fields>
        <fullName>Amount__c</fullName>
        <formula>Qty_Hours__c  *  Unit_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Amount</inlineHelpText>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Claim__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Claim</label>
        <referenceTo>MCAR_Claim_Management__c</referenceTo>
        <relationshipName>Claim_NCC_Services_Worksheet</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <inlineHelpText>Description</inlineHelpText>
        <label>Description</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>NCC_Category__c</fullName>
        <label>NCC Category</label>
        <picklist>
            <picklistValues>
                <fullName>Delay related costs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direct and claim handling related</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health and Safety, environmental</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quality related costs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VAT or other taxes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Qty_Hours__c</fullName>
        <label>Qty/Hours</label>
        <precision>6</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unit_Price__c</fullName>
        <label>Unit Price</label>
        <precision>16</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>NCC Services Worksheet</label>
    <nameField>
        <displayFormat>CNWS-{0000}</displayFormat>
        <label>NCC Services Worksheet Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NCC Services Worksheet</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>